# rutopia-prueba

./: .env.example  .gitignore  README.md  docker-compose.yml
back/: .dockerignore  Dockerfile  experiences_enhanced_rows.csv  pyproject.toml  test_agent_debug.py  test_service.py
back/app/: config.py  main.py
back/app/agent/: graph.py  prompts.py  state.py  tools.py
back/app/api/: websocket.py
back/app/models/: schemas.py
back/app/scripts/: embeddings.py  load.py
back/app/services/: embeddings.py  search.py  supabase.py
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ChatPanel.tsx  MapPanel.tsx
frontend/src/components/ui/: scroll-area.tsx
frontend/src/hooks/: useChat.ts
frontend/src/types/: index.ts
